--- a/style.css
+++ b/style.css
@@ -1,29 +1,11 @@
 body {
-    margin: 0;
+    background: black;
     overflow: hidden;
-    font-family: Arial, sans-serif;
-    text-align: center;
-    color: white;
 }
-
 canvas {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: -1;
-}
-
-header {
-    padding: 20px;
-    position: relative;
-    z-index: 1;
-}
-
-.hero {
-    margin-top: 50px;
-    padding: 20px;
-    position: relative;
-    z-index: 1;
+    width: 100%;
+    height: 100%;
 }
