--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
-body {
-    background: black;
-    overflow: hidden;
-}
-canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RealSensitivities</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <canvas id="liquidCanvas"></canvas>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="script.js"></script>
+</body>
+</html>
